--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "symfony/framework-bundle": "2.*,<2.7",
-        "symfony/form": ">=2.1,<2.7",
+        "symfony/framework-bundle": "2.*,<=2.7",
+        "symfony/form": ">=2.1,<=2.7",
         "twig/twig": ">=1.1,<2.0",
         "ezyang/htmlpurifier": "~4.0"
     },
     "require-dev": {
-        "symfony/twig-bundle": "2.*,<2.7",
+        "symfony/twig-bundle": "2.*,<=2.7",
         "symfony/yaml": "~2.0"
     },
     "autoload": {
